--- a/app/src/main/res/menu/menu_save.xml
+++ b/app/src/main/res/menu/menu_save.xml
@@ -4,6 +4,6 @@
 
     <item android:id="@+id/menu_save"
         android:title="@string/txt_save"
-        android:actionLayout="@layout/layout_menu_save"
+        app:actionLayout="@layout/layout_menu_save"
         app:showAsAction="ifRoom" />
 </menu>
