--- a/app/src/main/res/layout/row_item_notes.xml
+++ b/app/src/main/res/layout/row_item_notes.xml
@@ -1,22 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/priority_indicator"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    android:clickable="true"
-    android:focusable="true"
-    app:cardCornerRadius="16dp"
-    app:cardElevation="0dp"
-    app:strokeColor="@color/light_gray"
-    app:strokeWidth="1dp">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+        <variable
+            name="mNotes"
+            type="com.alif.notesapp.data.local.Notes" />
+    </data>
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/priority_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="14dp"
+        android:padding="8dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:parsePriorityColor="@{mNotes.priority}"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="0dp"
+        app:strokeColor="@color/light_gray"
+        app:strokeWidth="1dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/row_background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
+            android:sendDataToDetail="@{mNotes}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +59,7 @@
                 android:maxLines="10"
                 android:paddingStart="0dp"
                 android:paddingEnd="16dp"
-                android:text="@{mNotes.description}"
+                android:text="@{mNotes.desc}"
                 android:textColor="@color/dark_gray"
                 app:layout_constraintEnd_toEndOf="@id/tv_title"
                 app:layout_constraintStart_toStartOf="@+id/tv_title"
@@ -69,4 +80,5 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_description" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-</com.google.android.material.card.MaterialCardView>
+    </com.google.android.material.card.MaterialCardView>
+</layout>
