--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="pink">#F093FF</color>
     <color name="yellow">#FFDE8E</color>
     <color name="green">#96FF9C</color>
+    <color name="ss">#1b2639</color>
 </resources>
